<resources>
    <string name="app_name">Duck A L\'Orange</string>
    <string name="description">To help combat the food desert in Rochester, Duck à l\'Orange helps educate users on healthier options by finding recipes that are within the user\'s recommended daily calories and food preferences, and find supermarkets in the area that carry fresh and locally sourced groceries.</string>
    <string name="prompt_gender">Please select your biological sex:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="prompt_age">Age (years)</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="prompt_activity">Activity</string>
    <string-array name="activity_array">
        <item>Little to no exercise</item>
        <item>Exercise 1-2 times a week</item>
        <item>Exercise 3-5 times a week</item>
        <item>Exercise 6-7 times a week</item>
        <item>Exercise 8+ times a week</item>
    </string-array>
    <string name="button_done">done</string>
    <string name="preferences">Preferences</string>
    <string name="button_find">find</string>
    <string name="title_activity_maps">Map</string>
    <string name="pref">Vegetarian</string>
    <string name="pref1">Vegan</string>
    <string name="pref2">Dairy Free</string>
    <string name="pref3">Wheat/Gluten-Free</string>
    <string name="pref4">Low Carb</string>
    <string name="pref5">High Fiber</string>
    <string name="pref6">Low Sodium</string>
    <string name="pref7">Low/No Sugar</string>
    <string name="pref8">Low Cholesterol</string>
    <string name="pref9">Low Fat</string>
</resources>
