<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferences">

    <TextView
        android:id="@+id/txtPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/preferences"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ScrollView
        android:id="@+id/ScrollPref"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPref">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref1"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref2"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref3"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref4"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref5"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref6"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref7"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref8"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <Space
                    android:layout_width="?attr/listPreferredItemPaddingLeft"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/pref9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="1dp"
                    android:text="@string/pref9"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="?android:attr/listPreferredItemPaddingRight"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:onClick="startRecipes"
                    android:text="@string/button_done" />

            </TableRow>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>